crates/cairn-core/src/verbs/lint/checks/snapshots/cairn_core__verbs__lint__checks__taxonomy_conventions__tests__orphan_insight_without_source_ids_emits_warning_snapshot.snap
---
source: crates/cairn-core/src/verbs/lint/checks/taxonomy_conventions.rs
assertion_line: 203
expression: findings
---
[
  {
    "kind": "orphan_insight",
    "message": "insight record 01ARZ3NDEKTSV4RRFFQ69G5FAA is `belief` but has no provenance.source_ids; see docs/design/taxonomy-conventions.md",
    "severity": "warning",
    "suggested_fix": "attach the source records or summarize operation that produced this insight",
    "target": {
      "record_id": "01ARZ3NDEKTSV4RRFFQ69G5FAA"
    }
  }
]
